--- a/.github/workflows/cache-demo.yml
+++ b/.github/workflows/cache-demo.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       # ✅ Cache step
-      - name: Prime cache - cache-fe879db
+      - name: Prime-cache-fe879db
         id: cache
         uses: actions/cache@v4
         with:
